[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/interactable/miscellaneous/shop.png" type="Texture2D" id=1]
[ext_resource path="res://scripts/interactable/shop.gd" type="Script" id=2]
[ext_resource path="res://assets/interface/dialog/interactable_icon.png" type="Texture2D" id=3]
[ext_resource path="res://scenes/env/light.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 21, 14 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3 ),
"transitions": PackedFloat32Array( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3 ),
"transitions": PackedFloat32Array( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Shop" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="Texture2D" type="Sprite2D" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="CollisionShape3D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, 50 )
shape = SubResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="DialogIcon" type="Sprite2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 5, 20 )
texture = ExtResource( 3 )
hframes = 4

[node name="Animation" type="AnimationPlayer" parent="DialogIcon"]
autoplay = "idle"
playback_speed = 0.5
anims/RESET = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="AuxAnimation" type="AnimationPlayer" parent="DialogIcon"]
anims/RESET = SubResource( 6 )
anims/fade_in = SubResource( 7 )
anims/fade_out = SubResource( 8 )

[node name="Light3D" parent="." instance=ExtResource( 4 )]
position = Vector2( -48, 35 )

[node name="Light2" parent="." instance=ExtResource( 4 )]
position = Vector2( 49, 35 )

[connection signal="body_entered" from="." to="." method="on_shop_body_entered"]
[connection signal="body_exited" from="." to="." method="on_shop_body_exited"]
